# Inverted_Index

./: .gitignore  CMakeLists.txt
include/: file.cuh  inverted_index.cuh  search_inverted_index.cuh
src/: main.cu
